  timers with a -2 interval are now considered as controller sync timers and will be ran as many time per frame as needed, depending on user settings.

- the script is started and the Init events are now called *before* the static parts are prerendered. This allows a table script to adjust static parts properties on startup.

FIXES:

- timers with a -1 interval are always fired after physics and animation, but before rendering, allowing the script to update visual parts accordingly without any visual lag.
  This also applies to the new 'Animate' event which is designed for this purpose.

- fix visible depth range evaluation, allowing to simplify VR settings and to edit large VR room in LiveUI. Note that loading old tables will take a bit longer until they are saved with 10.8, since they need to compute bounds of each part.

- fix analogue nudge not working for joysticks/gamepads in XInput mode

- fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player

- reflections now work in the interactive camera/light editing mode (F6) as well

- fix overbrightness in F6 (interactive camera/light editing) mode

- fix swapped red & blue channels when exporting from BMPs

- handle broken tables better and try to load as much as possible

- static element preprocessing is now done on the GPU (which leads to a faster VPX-player start)
- increase preprocessing sample rate for the static parts of the table

- cleanup Light Debugger dialog and fix 2nd color button

- improve script editing performance again

- improve mouse cursor hide/unhide in (windowed) fullscreen

- fix 'O'-key ball debugging

- fix crash if sound card(s) hardware/driver setup changed

- update example tables with new raytraced ball shadows enabled and other new features
- add better wood texture

- update FreeImage library to latest 3.18.0 (custom build) (currently disabled)
- DirectX 8 port for input handling (currently disabled)
