@@ -10,43 +10,93 @@ Sampler* TextureManager::LoadTexture(BaseTexture* memtex, const SamplerFilter fi
    const Iter it = m_map.find(memtex);
    if (it == m_map.end())
    {
-      Sampler* sampler = new Sampler(&m_rd, memtex, force_linear_rgb, clampU, clampV, filter);
+      MapEntry entry;
+      entry.sampler = new Sampler(&m_rd, memtex, force_linear_rgb, clampU, clampV, filter);
       if (g_pplayer->m_pin3d.m_envTexture != nullptr && g_pplayer->m_pin3d.m_envTexture->m_pdsBuffer == memtex)
-         sampler->SetName("Env"s);
+         entry.sampler->SetName("Env"s);
       else
       {
          for (Texture* image : g_pplayer->m_ptable->m_vimage)
          {
             if (image->m_pdsBuffer == memtex)
             {
-               sampler->SetName(image->m_szName);
+               entry.name = image->m_szName;
+               entry.sampler->SetName(image->m_szName);
                break;
             }
          }
       }
-      sampler->m_dirty = false;
-      m_map[memtex] = sampler;
-      return sampler;
+      entry.sampler->m_dirty = false;
+      entry.clampU = clampU;
+      entry.clampV = clampV;
+      entry.filter = filter;
+      entry.forceLinearRGB = force_linear_rgb;
+      entry.preRenderOnly = g_pplayer->IsRenderPass(Player::STATIC_PREPASS);
+      m_map[memtex] = entry;
+      return entry.sampler;
    }
    else
    {
-      Sampler* sampler = it->second;
-      if (sampler->m_dirty)
+      MapEntry& entry = it->second;
+      if (entry.sampler->m_dirty)
       {
-         sampler->UpdateTexture(memtex, force_linear_rgb);
-         sampler->m_dirty = false;
+         entry.sampler->UpdateTexture(memtex, force_linear_rgb);
+         entry.sampler->m_dirty = false;
       }
-      sampler->SetClamp(clampU, clampV);
-      sampler->SetFilter(filter);
-      return sampler;
+      entry.sampler->SetClamp(clampU, clampV);
+      entry.sampler->SetFilter(filter);
+      entry.clampU = clampU;
+      entry.clampV = clampV;
+      entry.filter = filter;
+      entry.forceLinearRGB = force_linear_rgb;
+      entry.preRenderOnly &= g_pplayer->IsRenderPass(Player::STATIC_PREPASS);
+      return entry.sampler;
    }
+}
+
+vector<BaseTexture*> TextureManager::GetLoadedTextures() const
+{
+   std::vector<BaseTexture*> keys;
+   for (auto it = m_map.begin(); it != m_map.end(); ++it)
+      keys.push_back(it->first);
+   return keys;
+}
+
+SamplerFilter TextureManager::GetFilter(BaseTexture* memtex) const
+{
+   auto it = m_map.find(memtex);
+   return it == m_map.end() ? SamplerFilter::SF_UNDEFINED : it->second.filter;
+}
+
+SamplerAddressMode TextureManager::GetClampU(BaseTexture* memtex) const
+{
+   auto it = m_map.find(memtex);
+   return it == m_map.end() ? SamplerAddressMode::SA_UNDEFINED : it->second.clampU;
+}
+
+SamplerAddressMode TextureManager::GetClampV(BaseTexture* memtex) const
+{
+   auto it = m_map.find(memtex);
+   return it == m_map.end() ? SamplerAddressMode::SA_UNDEFINED : it->second.clampV;
+}
+
+bool TextureManager::IsLinearRGB(BaseTexture* memtex) const
+{
+   auto it = m_map.find(memtex);
+   return it == m_map.end() ? false : it->second.forceLinearRGB;
+}
+
+bool TextureManager::IsPreRenderOnly(BaseTexture* memtex) const
+{
+   auto it = m_map.find(memtex);
+   return it == m_map.end() ? false : it->second.preRenderOnly;
 }
 
 void TextureManager::SetDirty(BaseTexture* memtex)
 {
    const Iter it = m_map.find(memtex);
    if (it != m_map.end())
-      it->second->m_dirty = true;
+      it->second.sampler->m_dirty = true;
 }
 
 void TextureManager::UnloadTexture(BaseTexture* memtex)
@@ -54,7 +104,7 @@ void TextureManager::UnloadTexture(BaseTexture* memtex)
    const Iter it = m_map.find(memtex);
    if (it != m_map.end())
    {
-      delete it->second;
+      delete it->second.sampler;
       m_map.erase(it);
    }
 }
@@ -62,6 +112,6 @@ void TextureManager::UnloadTexture(BaseTexture* memtex)
 void TextureManager::UnloadAll()
 {
    for (Iter it = m_map.begin(); it != m_map.end(); ++it)
-      delete it->second;
+      delete it->second.sampler;
    m_map.clear();
 }
