@@ -202,6 +202,8 @@ BGSource =
 ; Counters decremented after each run
 NumberOfTimesToShowTouchMessage = 
 
+; Use cache to limit stutters and speedup loading
+CacheMode = 
 
 ; #######################################################
 ; # Camera default layout
